QE-751 Fix horizontal overflow issues

--- a/wp-content/themes/quarkexpeditions/src/front-end/components/info-cards/style.scss
+++ b/wp-content/themes/quarkexpeditions/src/front-end/components/info-cards/style.scss
@@ -24,6 +24,14 @@
 	}
 
 	&__slider {
+		overflow-x: clip;
+
+		#{$self}--has-overflow & {
+
+			@media screen and (min-width: grid-size(sm)) {
+				overflow-x: visible;
+			}
+		}
 
 		&:has(div.thumbnail-cards__nav) {
 			#{$self}__track {
